--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node backend/server",
     "test": "echo \"Error: no test specified\" && exit 1",
     "client": "npm run start --prefix frontend",
     "server": "nodemon backend/server",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "data:import": "node backend/scripts/seeder",
+    "data:destroy": "node backend/scripts/seeder destroy"
   },
   "repository": {
     "type": "git",
@@ -22,10 +25,14 @@
   "homepage": "https://github.com/harshitkhanna3254/hendrixmart#readme",
   "dependencies": {
     "axios": "^0.21.1",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.11.13"
   },
   "devDependencies": {
+    "colors": "^1.4.0",
+    "colors.js": "^1.2.4",
     "concurrently": "^5.3.0",
     "nodemon": "^2.0.7"
   }
