--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.11.13"
+    "express-async-handler": "^1.1.4",
+    "mongoose": "^5.11.13",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "colors": "^1.4.0",
