--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "mongoose": "^5.11.13",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "query-string": "^6.13.8"
   },
   "devDependencies": {
     "colors": "^1.4.0",
