--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.13",
     "morgan": "^1.10.0",
-    "query-string": "^6.13.8"
+    "query-string": "^6.13.8",
+    "razorpay": "^2.0.6",
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
     "colors": "^1.4.0",
