--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.13",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "query-string": "^6.13.8",
     "razorpay": "^2.0.6",
     "shortid": "^2.2.16"
