--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "server": "nodemon backend/server",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "data:import": "node backend/scripts/seeder",
-    "data:destroy": "node backend/scripts/seeder destroy"
+    "data:destroy": "node backend/scripts/seeder destroy",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
   },
   "repository": {
     "type": "git",
